--- a/Onyx-Editor/Onyx-Editor.vcxproj.filters
+++ b/Onyx-Editor/Onyx-Editor.vcxproj.filters
@@ -18,5 +18,52 @@
     <ClCompile Include="src\EditorApplication.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\EditorLayer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\EditorLayer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="res\models\Cube.fbx" />
+    <None Include="res\models\CubeTri.fbx" />
+    <None Include="res\models\Monkey.fbx" />
+    <None Include="res\models\Plane.fbx" />
+    <None Include="res\models\Teapot.FBX" />
+    <None Include="res\shaders\vulkantest\compile.bat">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="res\shaders\vulkantest\glslc.exe" />
+    <None Include="res\shaders\vulkantest\vkfrag.frag" />
+    <None Include="res\shaders\vulkantest\vkfrag.spv" />
+    <None Include="res\shaders\vulkantest\vkvert.spv" />
+    <None Include="res\shaders\vulkantest\vkvert.vert" />
+    <None Include="res\shaders\2DQuad.glsl" />
+    <None Include="res\shaders\3DTest.glsl" />
+    <None Include="res\shaders\FlatColor.glsl" />
+    <None Include="res\shaders\Texture.glsl" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="res\textures\skybox\Back.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\textures\skybox\Down.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\textures\skybox\Front.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\textures\skybox\Left.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\textures\skybox\Right.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\textures\skybox\Up.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
