--- a/Onyx-sandbox/onyx-sandbox.vcxproj
+++ b/Onyx-sandbox/onyx-sandbox.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{1238B3BD-16F3-4D55-B389-E888E0B94318}</ProjectGuid>
     <RootNamespace>onyxsandbox</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>Onyx-sandbox</ProjectName>
+    <ProjectName>Onyx-Sandbox</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
