--- a/Onyx/onyx.vcxproj
+++ b/Onyx/onyx.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Onyx\Editor\Editor.cpp" />
     <ClCompile Include="src\Onyx\Audio\Sound.cpp" />
     <ClCompile Include="src\Onyx\Audio\SoundManager.cpp" />
     <ClCompile Include="src\Onyx\core\Application.cpp" />
@@ -66,6 +67,7 @@
     <ClCompile Include="src\Platform\Vulkan\VulkanSwapchain.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Onyx\Editor\Editor.h" />
     <ClInclude Include="src\Onyx\OnyxEditor.h" />
     <ClInclude Include="src\Onyx\Physics\Ray.h" />
     <ClInclude Include="src\Onyx\Physics\Physics.h" />
@@ -238,7 +240,7 @@
     </Link>
     <PostBuildEvent>
       <Message>copy output binaries and linker scripts to the sandbox directory</Message>
-      <Command>xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.dll" "$(SolutionDir)bin\onyx-sandbox\$(Configuration)\onyx.dll" /Y &amp;&amp;   xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.lib" "$(SolutionDir)bin\onyx-sandbox\$(Configuration)\onyx.lib" /Y &amp;&amp;   xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.pdb" "$(SolutionDir)bin\onyx-sandbox\$(Configuration)\onyx.pdb" /Y &amp;&amp;  xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.dll" "$(SolutionDir)bin\Onyx-Editor\$(Configuration)\onyx.dll" /Y &amp;&amp;   xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.lib" "$(SolutionDir)bin\Onyx-Editor\$(Configuration)\onyx.lib" /Y &amp;&amp;   xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.pdb" "$(SolutionDir)bin\Onyx-Editor\$(Configuration)\onyx.pdb" /Y</Command>
+      <Command>xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.dll" "$(SolutionDir)bin\onyx-sandbox\$(Configuration)\onyx.dll" /Y &amp;&amp;   xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.lib" "$(SolutionDir)bin\onyx-sandbox\$(Configuration)\onyx.lib" /Y &amp;&amp;  xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.pdb" "$(SolutionDir)bin\onyx-sandbox\$(Configuration)\onyx.pdb" /Y &amp;&amp;  xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.dll" "$(SolutionDir)bin\Onyx-Editor\$(Configuration)\onyx.dll" /Y &amp;&amp;   xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.lib" "$(SolutionDir)bin\Onyx-Editor\$(Configuration)\onyx.lib" /Y &amp;&amp;   xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.pdb" "$(SolutionDir)bin\Onyx-Editor\$(Configuration)\onyx.pdb" /Y &amp;&amp;xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.dll" "$(SolutionDir)bin\Onyx-CLR\$(Configuration)\onyx.dll" /Y &amp;&amp;xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.lib" "$(SolutionDir)bin\Onyx-CLR\$(Configuration)\onyx.lib" /Y &amp;&amp;xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.pdb" "$(SolutionDir)bin\Onyx-CLR\$(Configuration)\onyx.pdb" /Y &amp;&amp;xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.dll" "$(SolutionDir)bin\Onyx-Editor-NET-Test\$(Configuration)\onyx.dll" /Y &amp;&amp;xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.lib" "$(SolutionDir)bin\Onyx-Editor-NET-Test\$(Configuration)\onyx.lib" /Y &amp;&amp;xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.pdb" "$(SolutionDir)bin\Onyx-Editor-NET-Test\$(Configuration)\onyx.pdb" /Y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -281,7 +283,7 @@
     </Link>
     <PostBuildEvent>
       <Message>copy output binaries and linker scripts to the sandbox directory</Message>
-      <Command>xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.dll" "$(SolutionDir)bin\onyx-sandbox\$(Configuration)\onyx.dll" /Y &amp;&amp;   xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.lib" "$(SolutionDir)bin\onyx-sandbox\$(Configuration)\onyx.lib" /Y &amp;&amp;   xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.pdb" "$(SolutionDir)bin\onyx-sandbox\$(Configuration)\onyx.pdb" /Y &amp;&amp;  xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.dll" "$(SolutionDir)bin\Onyx-Editor\$(Configuration)\onyx.dll" /Y &amp;&amp;   xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.lib" "$(SolutionDir)bin\Onyx-Editor\$(Configuration)\onyx.lib" /Y &amp;&amp;   xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.pdb" "$(SolutionDir)bin\Onyx-Editor\$(Configuration)\onyx.pdb" /Y</Command>
+      <Command>xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.dll" "$(SolutionDir)bin\onyx-sandbox\$(Configuration)\onyx.dll" /Y &amp;&amp;   xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.lib" "$(SolutionDir)bin\onyx-sandbox\$(Configuration)\onyx.lib" /Y &amp;&amp;  xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.pdb" "$(SolutionDir)bin\onyx-sandbox\$(Configuration)\onyx.pdb" /Y &amp;&amp;  xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.dll" "$(SolutionDir)bin\Onyx-Editor\$(Configuration)\onyx.dll" /Y &amp;&amp;   xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.lib" "$(SolutionDir)bin\Onyx-Editor\$(Configuration)\onyx.lib" /Y &amp;&amp;   xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.pdb" "$(SolutionDir)bin\Onyx-Editor\$(Configuration)\onyx.pdb" /Y &amp;&amp;xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.dll" "$(SolutionDir)bin\Onyx-CLR\$(Configuration)\onyx.dll" /Y &amp;&amp;xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.lib" "$(SolutionDir)bin\Onyx-CLR\$(Configuration)\onyx.lib" /Y &amp;&amp;xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.pdb" "$(SolutionDir)bin\Onyx-CLR\$(Configuration)\onyx.pdb" /Y &amp;&amp;xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.dll" "$(SolutionDir)bin\Onyx-Editor-NET-Test\$(Configuration)\onyx.dll" /Y &amp;&amp;xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.lib" "$(SolutionDir)bin\Onyx-Editor-NET-Test\$(Configuration)\onyx.lib" /Y &amp;&amp;xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.pdb" "$(SolutionDir)bin\Onyx-Editor-NET-Test\$(Configuration)\onyx.pdb" /Y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
