Updated C# wpf editor, preparign to remove Winform Editor test

--- a/Onyx-Editor-NET/Onyx-Editor-NET.csproj
+++ b/Onyx-Editor-NET/Onyx-Editor-NET.csproj
@@ -27,13 +27,16 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\bin\Onyx-Editor-NET\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>Onyx_Editor_NET.App</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -57,7 +60,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="src\Onyx-Editor-NET\Helper\BitmapDirect.cs" />
+    <Compile Include="src\Onyx-Editor-NET\Debug\Console.cs" />
+    <Compile Include="src\Onyx-Editor-NET\Framebuffer\BitmapDirect.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
